# openagent

./: README-CN.md  README.md  pyproject.toml
src/: run.py
src/open_agent/: application.py  main.py
src/open_agent/api/: agent_api.py  app_api.py  conversation_api.py  mcp_api.py  model_api.py  path_api.py  schedule_api.py  setting_api.py  skill_api.py  static_api.py
src/open_agent/repository/: conversation_repository.py  database.py  setting_repository.py
src/open_agent/service/: agent_service.py  schedule_service.py  setting_service.py  tool_service.py
src/open_agent/static/: index.html
src/open_agent/tool/: file_tool.py  mcp_tool.py  mcpcli_tool.py  shell_tool.py  skill_tool.py
src/openagent/: application.py  main.py
src/openagent/api/: agent_api.py  conversation_api.py  mcp_api.py  model_api.py  schedule_api.py  skill_api.py
src/openagent/repository/: conversation_repository.py  database.py  setting_repository.py
src/openagent/service/: agent_service.py  schedule_service.py  tool_service.py
src/openagent/static/: index.html
src/openagent/tool/: command_tool.py  file_tool.py  mcp_tool.py  skill_tool.py
static/: index.html
